fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -740,7 +740,6 @@ nav ul a:focus,
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  z-index: 199;
 }
 
 .wrapper {
@@ -751,6 +750,7 @@ nav ul a:focus,
 }
 
 .ground {
+  z-index: 200;
   position: absolute;
   bottom: 0;
   width: 100%;
